--- a/Translations/EnglishUS/LDViewMessages.ini
+++ b/Translations/EnglishUS/LDViewMessages.ini
@@ -310,7 +310,7 @@ Done =Done.
 OpenGlInfo0 =Vendor: %s\r\n
 OpenGlInfo1 =Renderer: %s\r\n
 OpenGlInfo2 =Version: %s\r\n\r\n
-OpenGlInfo3 =Extenstions:\r\n%s
+OpenGlInfo3 =Extensions:\r\n%s
 ; NOTE: the following string is rendered in the OpenGL window using a font with
 ; an OEM 437 character set (Standard DOS US/Western Europe).  If you cannot
 ; translate the text into your language using that character set, just change it
