Debian: version change to 4.3

--- a/QT/debian/changelog
+++ b/QT/debian/changelog
@@ -1,5 +1,5 @@
-ldview (4.2) stable; urgency=low
+ldview (4.3) stable; urgency=low
 
-  * Release 4.2
+  * Release 43.
 
- -- Peter Bartfai <pbartfai@stardust.hu>  Thu, 26 Jun 2014 11:30:03 +0200
+ -- Peter Bartfai <pbartfai@stardust.hu>  Thu, 7 Feb 2018 21:30:03 +0200
