--- a/QT/debian/changelog
+++ b/QT/debian/changelog
@@ -1,5 +1,5 @@
 ldview (4.3) stable; urgency=low
 
-  * Release 43.
+  * Release 4.3
 
  -- Peter Bartfai <pbartfai@stardust.hu>  Thu, 7 Feb 2018 21:30:03 +0200
