--- a/QT/debian/changelog
+++ b/QT/debian/changelog
@@ -1,3 +1,9 @@
+ldview (4.4b4) stable; urgency=low
+
+  * Release 4.4b4
+
+ -- Peter Bartfai <pbartfai@stardust.hu>  Fri, 7 May 2021 21:30:00 +0200
+
 ldview (4.4) stable; urgency=low
 
   * Release 4.4
